force-app/main/default/objects/Change_Order__c/Change_Order__c.object-meta.xml
<CustomObject>
    <label>Change Order</label>
    <nameField>
        <label>Change Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>