force-app/main/default/objects/Change_Order__c/fields/Cost_of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Goods__c</fullName>
    <label>Cost of Goods</label>
    <summarizedField>Order_Item__c.Cost_of_Goods__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Change_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>