force-app/main/default/objects/Change_Order__c/fields/Gross_Sale__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sale__c</fullName>
    <label>Gross Sale</label>
    <summarizedField>Order_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Change_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>