force-app/main/default/objects/Change_Order__c/fields/Sales_Rep_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Personnel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Personnel</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Change Orders</relationshipLabel>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>