force-app/main/default/objects/Change_Order__c/fields/Sales_Rep_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>