force-app/main/default/objects/Change_Order__c/fields/Total_City_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_City_Tax__c</fullName>
    <label>Total City Tax</label>
    <summarizedField>Order_Item__c.City_Tax_Amount__c</summarizedField>
    <summaryForeignKey>Order_Item__c.Change_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>