force-app/main/default/objects/Change_Order__c/fields/Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment__c</fullName>
    <label>Total Investment</label>
    <summarizedField>Order_Item__c.Monthly_Investment__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Item__c.Service_Check__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Item__c.Change_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>